# hybrid-ai

./: .gitignore  CHANGELOG.md  flake.nix
.flox/: env.json
.flox/env/: manifest.toml
docs/business-domain/: 01-br-sandboxed-on-device-inference-target.md  01-sandboxed-on-device-inference-target.md  02-br-cross-platform-swift-ui-delivery-target.md  02-cross-platform-swift-ui-delivery-target.md  03-br-apple-deployment-authority.md  04-br-linux-sandbox-approximation-requirements.md  05-br-conversation-oriented-inference-experience.md  06-br-shared-swift-core-portability-requirements.md  README.md
docs/chat/: determinate_nix_flox_setup.md  devenv_portable_workflow.md  linux_gpu_runtime_portability_runbook.md  litert_lm_gemma4_swift_runbook.md  swift_ui_cross_platform_roadmap.md  swiftly_632_migration_runbook.md
docs/design-domain/: 01-bc-cross-platform-runtime-bounded-context.md  01-cross-platform-runtime-bounded-context.md  02-dd-platform-specific-ui-shells-decision-space.md  02-platform-specific-ui-shells-decision-space.md  03-dd-runtime-adapter-pattern.md  04-dd-backend-transport-and-error-boundary.md  (+11 more)
nix/: nix.conf
scripts/: local_env.sh
src/inference_srv_py/: pyproject.toml
src/inference_srv_py/inference_srv_py/: __init__.py  backend.py  debug_snapshot.py  gpu_validation.py  numpy_demo.py  server.py
src/inference_srv_py/tests/: test_backend.py  test_bootstrap.py
src/python/: pyproject.toml
src/python/hybrid_ai/: __init__.py  __main__.py  backend.py  bootstrap.py  debug_snapshot.py  server.py
src/python/tests/: test_backend.py  test_bootstrap.py
(+225 files in other folders)
