[tool.poetry]
name = "hybrid-ai"
version = "0.1.0"
description = "Hybrid cloud AI python module"
authors = ["hybrid-ai team"]
packages = [{ include = "hybrid_ai" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
